# cppml

./: CMakeLists.txt  README.md
.devcontainer/: devcontainer.json
docker/: Dockerfile  docker-compose.yml
examples/: main.cpp
include/: core.h
src/: placeholder.cpp
